--- a/web/example.html
+++ b/web/example.html
@@ -7,6 +7,6 @@
 	<body>
 		<div id="commenter-container"></div>
 		<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
-		<script data-container="commenter-container" src="js/commenter.js" type="text/javascript"></script>
+		<script data-container="commenter-container" data-object-id="example" src="js/commenter.js" type="text/javascript"></script>
 	</body>
 </html>
