--- a/web/example.html
+++ b/web/example.html
@@ -3,6 +3,7 @@
 	<head>
 		<title></title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<link rel="stylesheet" type="text/css" href="css/commenter.css">
 	</head>
 	<body>
 		<div id="commenter-container"></div>
