--- a/web/example.html
+++ b/web/example.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	</head>
 	<body>
-		<div id="commenter-container"></div>
-		<script data-container="commenter-container" data-object-id="example" src="js/commenter.js" type="text/javascript"></script>
+		<div id="commenter-container" data-object-id="example"></div>
+		<script data-container="commenter-container" src="js/commenter.js" type="text/javascript"></script>
 	</body>
 </html>
