Count comments in example.html

--- a/web/example.html
+++ b/web/example.html
@@ -5,7 +5,9 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	</head>
 	<body>
-		<div id="commenter-container" data-object-id="example"></div>
+		<div id="commenter-container" data-object-id="example">
+			<div class="commenter-count-container"><span class="commenter-count">0</span> comments total</div>
+		</div>
 		<script data-container="commenter-container" src="js/commenter.js" type="text/javascript"></script>
 	</body>
 </html>
